--- a/gestionExample-struts2/pom.xml
+++ b/gestionExample-struts2/pom.xml
@@ -109,6 +109,20 @@
 			<version>1.3.2</version>
 		</dependency>
 
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-web -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.2.5.RELEASE</version>
+		</dependency>
+
+		<!-- http://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>4.2.5.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
